--- a/Assignment-2/p4.html
+++ b/Assignment-2/p4.html
@@ -29,6 +29,8 @@ should include:
                                 <input type="text" id="fname" name="fname"><br><br>
                                 <label for="lname">Last name</label>
                                 <input type="text" id="lname" name="lname"><br><br>
+                            </th>
+                            <th>
                                 <label for="country">country</label>
                                 <select name="country" id="country">
                                     <option value="india">India</option>
@@ -37,35 +39,60 @@ should include:
                                     <option value="germany">germany</option>
                                 </select>
                             </th>
+                        </tr>
+                        <tr>
                             <th>
-                                <ul>
-                                    <li>item 1</li>
-                                    <li>item 2</li>
-                                    <li>item 3</li>
-                                </ul>
+                                <label for="fname">First name</label>
+                                <input type="text" id="fname" name="fname"><br><br>
+                                <label for="lname">Last name</label>
+                                <input type="text" id="lname" name="lname"><br><br>
+                            </th>
+                            <th>
+                                <label for="country">country</label>
+                                <select name="country" id="country">
+                                    <option value="india">India</option>
+                                    <option value="usa">usa</option>
+                                    <option value="uk">uk</option>
+                                    <option value="germany">germany</option>
+                                </select>
                             </th>
                         </tr>
                         <tr>
-                            <td>
-                                <label for="comment">Comment</label>
-                                <textarea name="comment" id="comment"></textarea>
-                            </td>
-                            <td>
-                                <input type="submit">
-                                <input type="reset">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
+                            <th>
+                                <label for="fname">First name</label>
+                                <input type="text" id="fname" name="fname"><br><br>
+                                <label for="lname">Last name</label>
+                                <input type="text" id="lname" name="lname"><br><br>
+                            </th>
+                            <th>
+                                <label for="country">country</label>
+                                <select name="country" id="country">
+                                    <option value="india">India</option>
+                                    <option value="usa">usa</option>
+                                    <option value="uk">uk</option>
+                                    <option value="germany">germany</option>
+                                </select>
+                            </th>
                         </tr>
                     </table>
                 </th>
-                <th></th>
+                <th>
+                    <ul>
+                        <li>item 1</li>
+                        <li>item 2</li>
+                        <li>item 3</li>
+                    </ul>
+                </th>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
+                <td>
+                    <label for="comment">Comment</label><br>
+                    <textarea name="comment" id="comment"></textarea>
+                </td>
+                <td>
+                    <input type="submit">
+                    <input type="reset">
+                </td>
             </tr>
         </table>
     </form>
