--- a/Assignment-5/p2.html
+++ b/Assignment-5/p2.html
@@ -10,10 +10,8 @@
             padding: 0px;
         }
         .main{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            max-width: 400px;
+            margin: auto;
         }
         .rows{
             padding-bottom: 30px;
@@ -23,7 +21,7 @@
            margin-bottom: 20px;
          }
         .calculator{
-            width: 300px;
+            width: 400px;
             box-shadow: 1px 2px 8px 2px rgb(228, 227, 227);
         }
         .result{
@@ -31,8 +29,10 @@
         }
         .result>input{
             width:100%;
-            height: 50px;
+            height: 80px;
             border: none;
+            outline: none;
+            font-size: 25px;
             box-shadow: 1px 2px 10px 2px rgb(228, 227, 227);
         }
         .row{
@@ -40,10 +40,9 @@
           
         }
         .row>.values,.row>.symbols,.clear{
-            width: 57px;
-            height: 57px;
-            font-weight: 800;
-            font-size: 20px;
+            width: 82px;
+            height: 82px;
+            font-size: 25px;
             box-shadow: 1px 2px 10px 2px rgb(228, 227, 227);
             border: none;
             background-color: white;
