HTML-CSS-ASSIGNMENT-6

--- a/Assignment-6/p2.html
+++ b/Assignment-6/p2.html
@@ -86,9 +86,10 @@
             border: 1px solid rgb(226, 225, 225);
             border-radius: 10px;
             padding: 10px;
+            text-align: center;
         }
         .investors>div>img{
-           width: 100%;
+           width: 70%;
            height: 100px;
         }
         .investors{
