--- a/Assignment-6/p2.html
+++ b/Assignment-6/p2.html
@@ -24,7 +24,8 @@
             padding-top: 20px;
         }
         .main-container>.btn{
-            text-align: center;
+            margin: auto;
+            width: 150px;
             padding: 20px;  
         }
         .btn>button{
@@ -34,6 +35,7 @@
             border: 1px solid orangered;
             border-radius: 10px;
             color: orangered;
+            width: 100%;
         }
         .sub-container{
             display: flex;
