--- a/Assignment-6/p2.html
+++ b/Assignment-6/p2.html
@@ -24,8 +24,7 @@
             padding-top: 20px;
         }
         .main-container>.btn{
-            margin: auto;
-            width: 150px;
+           text-align: center;
             padding: 20px;  
         }
         .btn>button{
@@ -35,7 +34,6 @@
             border: 1px solid orangered;
             border-radius: 10px;
             color: orangered;
-            width: 100%;
         }
         .sub-container{
             display: flex;
