--- a/Movies-app/search.html
+++ b/Movies-app/search.html
@@ -33,12 +33,12 @@
         </nav>
     </div>
     <div id="search-movies-container">
-        <h1 style="padding-top: 80px;">Popular Searches</h1>
+        <h1 style="padding-top: 80px;">Search For Movies</h1>
         <div id="trending-movies" style="flex-wrap: wrap;">
             
         </div>
     </div>
 </body>
 </html>
-<script src="script.js"></script>
+<script src="search.js"></script>
 </script>
