--- a/Movies-app/search.html
+++ b/Movies-app/search.html
@@ -12,7 +12,7 @@
      <div id="nav-bar">
         <nav id="nav">
             <div id="nav-logo">
-                <img src="./images/—Pngtree—movie board icon_4751062.png" alt="" width="50px">
+                <img src="./images/logo.png" alt="" width="50px">
             </div>
             <div id="nav-links">
                 <a href="index.html">Home</a>
