--- a/Youtube app/index.html
+++ b/Youtube app/index.html
@@ -4,16 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>youtube</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div id="main">
         <h1>Youtube</h1>
         <div id="search-container">
-            <input type="search" id="search" placeholder="Search">
-            <button onclick="getData()">Search</button>
+            <input type="search" id="search" placeholder="Search for Videos, movies, music etc">
+            <button onclick="getData()"><i class="fa fa-search"></i></button>
         </div>
+        
         <div id="content">
-
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
+            <div>
+                <img src="https://placehold.co/600x400" alt="">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptate quasi earum!</h4>
+                <p>Channel name</p>
+            </div>
         </div>
     </div>
 </body>
