--- a/Movies-app/index.html
+++ b/Movies-app/index.html
@@ -11,6 +11,9 @@
     <!-- nav bar -->
     <div id="nav-bar">
         <nav id="nav">
+            <span class="material-symbols-outlined" id="menu">
+                menu
+                </span>
             <div id="nav-logo">
                 <img src="./images/logo.png" alt="" width="50px">
             </div>
